feat: endpoint to update monthly pp
